<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AttendanceActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abhaya_libre"
                android:text="@string/attendance_activity_title"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutInfoShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/constraint_info_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <TextView
            android:id="@+id/TVSubjectName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/show_subject_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/TVShowSubjectName"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/constraintLayoutInfoShow" />

        <TextView
            android:id="@+id/TVShowSubjectName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/hint_subject_name"
            android:layout_marginEnd="5dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:singleLine="true"
            android:maxLines="2"
            app:layout_constraintHorizontal_weight="1"
            android:ellipsize="end"
            android:maxEms="10"
            android:drawablePadding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/TVSubjectName"
            app:layout_constraintTop_toTopOf="@id/constraintLayoutInfoShow" />

        <TextView
            android:id="@+id/TVShowClassName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/hint_classname"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/div"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/className"
            app:layout_constraintTop_toBottomOf="@id/TVSubjectName" />

        <TextView
            android:id="@+id/div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/show_div"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/TVShowDiv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/TVShowClassName"
            app:layout_constraintTop_toBottomOf="@id/TVSubjectName" />

        <TextView
            android:id="@+id/TVShowDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/hint_div"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/div"
            app:layout_constraintTop_toBottomOf="@id/TVShowSubjectName" />

        <TextView
            android:id="@+id/className"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/show_classname"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/TVShowClassName"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TVShowSubjectName" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_present"
            app:layout_constraintRight_toLeftOf="@id/TVShowPresentCount"
            app:layout_constraintTop_toBottomOf="@id/className" />

        <TextView
            android:id="@+id/TVShowPresentCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/TVShowAbsentCount"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/className" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_absent"
            app:layout_constraintRight_toLeftOf="@id/TVShowAbsentCount"
            app:layout_constraintTop_toBottomOf="@id/TVShowClassName" />

        <TextView
            android:id="@+id/TVShowAbsentCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/TVShowPresentCount"
            app:layout_constraintTop_toBottomOf="@id/TVShowClassName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:paddingVertical="80dp"
        android:id="@+id/constraintLayoutAttendanceGrid"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayoutInfoShow">

        <ScrollView
            android:layout_width="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/constraintLayoutAttendanceGrid"
            app:layout_constraintTop_toTopOf="@id/constraintLayoutAttendanceGrid"
            app:layout_constraintLeft_toLeftOf="@id/constraintLayoutAttendanceGrid"
            app:layout_constraintRight_toRightOf="@id/constraintLayoutAttendanceGrid"
            android:layout_height="wrap_content">

            <androidx.gridlayout.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_marginHorizontal="5dp"
                android:id="@+id/GLAttendance"
                android:layout_height="wrap_content">

            </androidx.gridlayout.widget.GridLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>