<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Home">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abhaya_libre"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <!--    Class Name EditText  -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_SubjectName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="25dp"
        android:hint="@string/hint_subject_name"
        app:boxStrokeErrorColor="@color/red"
        app:endIconDrawable="@drawable/ic_baseline_check"
        app:endIconTint="@color/green"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:helperText="@string/required"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ET_SubjectName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- EditText ClassName-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_ClassName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/hint_classname"
        app:boxStrokeErrorColor="@color/red"
        app:endIconMode="custom"
        app:endIconTint="@color/green"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:helperText="@string/required"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/TIL_Div"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TIL_SubjectName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ET_ClassName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <!--    EditText Div -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_Div"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/hint_div"
        app:boxStrokeErrorColor="@color/red"
        app:endIconTint="@color/green"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:helperText="@string/required"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/TIL_ClassName"
        app:layout_constraintTop_toBottomOf="@+id/TIL_SubjectName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ET_Div"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <!--    DatePicker-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="Date"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayout5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TIL_ClassName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ET_DatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    Hidden DatePicker Button-->
    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#0000000f"
        android:onClick="showTimePickerDialog"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout3"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout3" />


<!--   TimePicker -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout3"
        app:layout_constraintTop_toBottomOf="@+id/TIL_Div">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:onClick="click"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>